# htmx-rust-tera-template

./: Cargo.toml  README.md
.tours/: htmx-rust-tera-template.tour
src/: main.rs
src/static/: style.css
src/templates/: base.html  counter.html  index.html
